# weather

./: .gitignore  api_bot.py  bot.py  emoji_collector.py  new_bot.py  pyproject.toml  requirements.txt
